Update Java into Java17
Signed-off-by: 陳謙 <t112598078@ntut.edu.tw>