@@ -10,7 +10,7 @@ tasks.withType(JavaCompile) {
 group 'ntut.edu.tw'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+sourceCompatibility = 17
 
 // Define the main class
 mainClassName = 'main'
@@ -24,17 +24,31 @@ repositories {
 
 dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'junit:junit:4.12'
-    implementation 'junit:junit:4.12'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-//    compile name: 'aiguide-plugin-3.8-SNAPSHOT-PreCrawling'
-//    compile name: 'irobot-crawler_record_version'
-    compile name: 'irobot-plugin-1.0-SNAPSHOT-jar-with-dependencies'
-    compile name: 'aiguide-plugin-3.8-SNAPSHOT'
-    compile group: 'net.sf.py4j', name: 'py4j', version: '0.10.9'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    testImplementation 'junit:junit:4.12'
 
-    compile group: 'org.slf4j', name:'slf4j-api', version: '1.7.2'
-    compile group: 'ch.qos.logback', name:'logback-classic', version: '1.0.9'
-    compile group: 'ch.qos.logback', name:'logback-core', version: '1.0.9'
+//    implementation name: 'aiguide-plugin-3.8-SNAPSHOT-PreCrawling'
+//    implementation name: 'irobot-crawler_record_version'
+    implementation name: 'irobot-plugin-1.0-SNAPSHOT-jar-with-dependencies'
+    implementation name: 'aiguide-plugin-3.8-SNAPSHOT'
+
+    implementation group: 'net.sf.py4j', name: 'py4j', version: '0.10.9'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+
+
+    implementation group: 'net.sf.py4j', name: 'py4j', version: '0.10.9'
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.2'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.0.9'
+    implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.0.9'
+    implementation 'org.apache.commons:commons-csv:1.14.0'
+    implementation "dev.langchain4j:langchain4j:1.0.1"
+    implementation "dev.langchain4j:langchain4j-open-ai:1.0.1"
+}
+
+application {
+    applicationDefaultJvmArgs = [
+        '--add-opens=java.base/java.lang=ALL-UNNAMED',
+        '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
+        '--add-opens=java.base/java.util=ALL-UNNAMED',
+        '--add-opens=java.base/java.io=ALL-UNNAMED'
+    ]
 }
